--- a/cupick/requirements.txt
+++ b/cupick/requirements.txt
@@ -15,5 +15,7 @@ hiredis==0.1.1
 pyelasticsearch==0.2
 geopy==0.94.2
 mysql-python==1.2.4c1
+python-dateutil==2.1
 south==0.7.6
 stripe==1.7.6
+facebook-sdk==0.4.0
